@@ -1,5 +1,5 @@
 <?php
-// $Id: jquery_update.install,v 1.3.4.1 2009/04/23 18:15:57 mfer Exp $
+// $Id: jquery_update.install,v 1.3.4.2 2010/09/09 03:12:16 sun Exp $
 
 /**
  * @file
@@ -48,9 +48,13 @@ function jquery_update_update_6100() {
  * version update to minified.
  */
 function jquery_update_update_6200() {
+  $ret = array();
+
   if (variable_get('jquery_update_compression_type', 'min') == 'pack') {
     variable_set('jquery_update_compression_type', 'min');
   }
+
+  return $ret;
 }
 
 /**
