@@ -1,7 +1,9 @@
-// $Id: CHANGELOG.txt,v 1.3.2.1.2.4 2010/04/23 16:37:46 sun Exp $
+// $Id: CHANGELOG.txt,v 1.3.2.1.2.6 2010/09/09 03:12:16 sun Exp $
 
 jQuery Update 6.x-2.x, xxxx-xx-xx
 ---------------------------------
+#443718 by markus_petrux: Fixed PHP notices in jquery_update_update_6200().
+#775162 by Bevan: Fixed tabledrag.js errors with nested tables.
 
 
 jQuery Update 6.x-2.0-alpha1, 2010-04-23
